crates/gateway/tests/snapshots/snapshot_tests__snapshot_models_response_with_credentials.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 433
expression: response
---
count: 3
message: Models loaded from configuration
models:
  - capabilities: []
    context_window: 128000
    id: gpt-4
    provider: openai
  - capabilities: []
    context_window: 128000
    id: gpt-3.5-turbo
    provider: openai
  - capabilities: []
    context_window: 128000
    id: claude-3-opus
    provider: anthropic
