crates/gateway/tests/snapshots/snapshot_tests__snapshot_routing_policy_policy_aware.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 227
expression: config.routing
---
strategy: policy_aware
session_affinity: true
min_healthy_credentials: 1
fallback_depth: 2
