crates/gateway/tests/snapshots/snapshot_tests__snapshot_routing_policy_time_aware.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 213
expression: config.routing
---
strategy: time_aware
session_affinity: true
min_healthy_credentials: 1
fallback_depth: 2
