crates/gateway/tests/snapshots/snapshot_tests__snapshot_routing_policy_weighted.snap
---
source: crates/gateway/tests/snapshot_tests.rs
assertion_line: 199
expression: config.routing
---
strategy: weighted
session_affinity: true
min_healthy_credentials: 1
fallback_depth: 2
